Se trabaja en cambios al laboratorio 2

--- a/Laboratorio2/index.html
+++ b/Laboratorio2/index.html
@@ -23,30 +23,31 @@
         </nav>
     </header>
     <section class="main">
-        <article>
-            <h2>Titulo de nuestra pagina</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam dignissimos quisquam animi veritatis quasi labore ratione dolores nisi unde iste modi at dolorem eos explicabo adipisci eligendi, saepe nesciunt minima!
-            Iste iure reprehenderit ab similique, mollitia recusandae odio consectetur quam quisquam sequi vitae, aliquam numquam repellat pariatur id alias. Architecto, qui labore inventore eveniet commodi illo corporis quas maiores exercitationem?
-            Officiis, deleniti sapiente praesentium, cumque repudiandae tenetur, eligendi beatae dolorum saepe quis eveniet omnis non autem delectus tempora possimus dignissimos quisquam repellendus! Deserunt doloribus id, esse praesentium dicta ratione quo?
-            Maxime placeat nobis nisi delectus, non id reiciendis? Maiores, ipsam. Molestias atque, soluta maiores obcaecati iusto animi qui ipsa, laborum aliquam quibusdam consequuntur esse fugiat quo, voluptas maxime veniam aut.
-            Aut ullam saepe itaque facilis quam nisi similique quibusdam? Laboriosam unde aspernatur voluptatibus! Nesciunt delectus, dolor, dicta placeat ab officiis sunt cupiditate quidem dolore dolorum, atque quos porro odit ullam.</p>
-        </article>
-        <article>
-            <h2>Titulo de nuestra pagina</h2>
-            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam dignissimos quisquam animi veritatis quasi labore ratione dolores nisi unde iste modi at dolorem eos explicabo adipisci eligendi, saepe nesciunt minima!
-            Iste iure reprehenderit ab similique, mollitia recusandae odio consectetur quam quisquam sequi vitae, aliquam numquam repellat pariatur id alias. Architecto, qui labore inventore eveniet commodi illo corporis quas maiores exercitationem?
-            Officiis, deleniti sapiente praesentium, cumque repudiandae tenetur, eligendi beatae dolorum saepe quis eveniet omnis non autem delectus tempora possimus dignissimos quisquam repellendus! Deserunt doloribus id, esse praesentium dicta ratione quo?
-            Maxime placeat nobis nisi delectus, non id reiciendis? Maiores, ipsam. Molestias atque, soluta maiores obcaecati iusto animi qui ipsa, laborum aliquam quibusdam consequuntur esse fugiat quo, voluptas maxime veniam aut.
-            Aut ullam saepe itaque facilis quam nisi similique quibusdam? Laboriosam unde aspernatur voluptatibus! Nesciunt delectus, dolor, dicta placeat ab officiis sunt cupiditate quidem dolore dolorum, atque quos porro odit ullam.</p>
-        </article>
         <aside>
             <h3>Titulo de nuestra pagina</h3>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus esse, qui tempore distinctio quas illum possimus dolores nesciunt porro a magnam quaerat adipisci cupiditate. Est eius fuga non nesciunt fugiat!
             Quae atque iure distinctio quisquam harum cum dolor dolorem iusto, in dolores voluptatum dolorum consectetur doloremque iste aperiam nihil obcaecati animi adipisci quos ex libero. Atque accusamus assumenda reiciendis delectus?
             Quam nesciunt dolor debitis odit perspiciatis hic facere illum laudantium nobis laboriosam magni delectus beatae natus, animi temporibus quod, officia iusto exercitationem reiciendis similique minus! Laboriosam possimus ducimus recusandae vitae!
             Reiciendis nemo doloribus officia voluptatibus cumque minima a eveniet, mollitia assumenda hic explicabo ipsa. Doloremque provident blanditiis nesciunt mollitia eos, exercitationem sunt atque, architecto accusantium dicta soluta deleniti. Veniam, dolores.
-            Fuga voluptates similique quae assumenda totam nisi doloremque sequi quo, ad officia qui non praesentium, maiores rem harum in voluptatibus ex beatae tempora quaerat nam asperiores quibusdam odit! Vero, suscipit.</p>
+            Fuga voluptates similique quae assumenda totam nisi doloremque sequi quo, ad officia qui non praesentium, maiores rem harum in voluptatibus ex beatae tempora quaerat nam asperiores quibusdam odit! Vero, suscipit.
+            </p>
         </aside>
+        <article class="articles">
+            <h2>Titulo de nuestra pagina</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam dignissimos quisquam animi veritatis quasi labore ratione dolores nisi unde iste modi at dolorem eos explicabo adipisci eligendi, saepe nesciunt minima!
+            Iste iure reprehenderit ab similique, mollitia recusandae odio consectetur quam quisquam sequi vitae, aliquam numquam repellat pariatur id alias. Architecto, qui labore inventore eveniet commodi illo corporis quas maiores exercitationem?
+            Officiis, deleniti sapiente praesentium, cumque repudiandae tenetur, eligendi beatae dolorum saepe quis eveniet omnis non autem delectus tempora possimus dignissimos quisquam repellendus! Deserunt doloribus id, esse praesentium dicta ratione quo?
+            Maxime placeat nobis nisi delectus, non id reiciendis? Maiores, ipsam. Molestias atque, soluta maiores obcaecati iusto animi qui ipsa, laborum aliquam quibusdam consequuntur esse fugiat quo, voluptas maxime veniam aut.
+            Aut ullam saepe itaque facilis quam nisi similique quibusdam? Laboriosam unde aspernatur voluptatibus! Nesciunt delectus, dolor, dicta placeat ab officiis sunt cupiditate quidem dolore dolorum, atque quos porro odit ullam.</p>
+        </article>
+        <article class="articles">
+            <h2>Titulo de nuestra pagina</h2>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aperiam dignissimos quisquam animi veritatis quasi labore ratione dolores nisi unde iste modi at dolorem eos explicabo adipisci eligendi, saepe nesciunt minima!
+            Iste iure reprehenderit ab similique, mollitia recusandae odio consectetur quam quisquam sequi vitae, aliquam numquam repellat pariatur id alias. Architecto, qui labore inventore eveniet commodi illo corporis quas maiores exercitationem?
+            Officiis, deleniti sapiente praesentium, cumque repudiandae tenetur, eligendi beatae dolorum saepe quis eveniet omnis non autem delectus tempora possimus dignissimos quisquam repellendus! Deserunt doloribus id, esse praesentium dicta ratione quo?
+            Maxime placeat nobis nisi delectus, non id reiciendis? Maiores, ipsam. Molestias atque, soluta maiores obcaecati iusto animi qui ipsa, laborum aliquam quibusdam consequuntur esse fugiat quo, voluptas maxime veniam aut.
+            Aut ullam saepe itaque facilis quam nisi similique quibusdam? Laboriosam unde aspernatur voluptatibus! Nesciunt delectus, dolor, dicta placeat ab officiis sunt cupiditate quidem dolore dolorum, atque quos porro odit ullam.</p>            
+        </article>
     </section>
     <footer>Roberto Castro - Desarrollo Web</footer>
 </body>
